# origin

./: CMakeLists.txt  README.md  car.hpp  main.cpp  object.hpp  war
json/: json.cpp  json.hpp  main.cpp  placeholder
racing/: CMakeLists.txt  car.cpp  car.hpp  effect.cpp  effect.hpp  gameEvents.cpp  gameEvents.hpp  main.cpp  object.cpp  object.hpp
tetris/: placeholder
war/: CMakeLists.txt  Placeholder File  README  card.cpp  card.hpp  classifications.cpp  deck.cpp  deck.hpp  game.cpp  game.hpp  jokerCard.cpp  jokerCard.hpp  main.cpp  standardCard.cpp  standardCard.hpp
